@@ -1,0 +1,58 @@
+NAME
+    Acme::CPANAuthors::Pumpkings - We are pumpkings.
+
+SYNOPSIS
+     use Acme::CPANAuthors;
+
+     my $authors  = Acme::CPANAuthors -> new ("Pumpkings");
+
+     my $number   = $authors -> count;
+     my @ids      = $authors -> id;
+     my @distros  = $authors -> distributions ("LWALL");
+     my $url      = $authors -> avatar_url    ("LWALL");
+     my $kwalitee = $authors -> kwalitee      ("LWALL");
+     my $name     = $authors -> name          ("LWALL");
+
+    See documentation for Acme::CPANAuthors for more details.
+
+DESCRIPTION
+    This class provides a hash of PAUSE IDs and names of the Pumpkings.
+
+DEVELOPMENT
+    The current sources of this module are found on github,
+    <git://github.com/Abigail/Acme--CPANAuthors--CPANTS--Pumpkings.git>.
+
+AUTHOR
+    Abigail, <mailto:cpan@abigail.be>.
+
+COPYRIGHT and LICENSE
+    Copyright (C) 2009 by Abigail.
+
+    Permission is hereby granted, free of charge, to any person obtaining a
+    copy of this software and associated documentation files (the
+    "Software"), to deal in the Software without restriction, including
+    without limitation the rights to use, copy, modify, merge, publish,
+    distribute, sublicense, and/or sell copies of the Software, and to
+    permit persons to whom the Software is furnished to do so, subject to
+    the following conditions:
+
+    The above copyright notice and this permission notice shall be included
+    in all copies or substantial portions of the Software.
+
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+    OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+    IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+    FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+    DEALINGS IN THE SOFTWARE.
+
+INSTALLATION
+    To install this module, run, after unpacking the tar-ball, the following
+    commands:
+
+       perl Makefile.PL
+       make
+       make test
+       make install
+
